Fix alignment

--- a/src/components/car/style.module.scss
+++ b/src/components/car/style.module.scss
@@ -8,10 +8,10 @@
 
 .cardFooter {
   display: grid;
-  grid-template-columns: 20px 1fr;
+  grid-template-columns: 12px 1fr;
   grid-gap: 10px;
   align-items: center;
-  justify-items: center;
+  justify-items: start;
 }
 
 .cardLink {
